--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-CAIXA ELETRÙNICO
+CAIXA ELETRÙNICO (ORIGINAL)
 
 Desenvolva um programa que simule a entrega de notas quando um cliente efetuar um saque em um caixa eletrÙnico. Os requisitos b·sicos s„o os seguintes:
 
